syntax = "proto3";
package ray;

service Storage {
    rpc Set (SetRequest) returns (SetReply);
    rpc Get (GetRequest) returns (GetReply);
}

message SetRequest {
   bytes key = 1;
   bytes value = 2;
}

message SetReply {}

message GetRequest {
    bytes key = 1;
}

message GetReply {
   bytes value = 1;
}
